# cache-warden

./: Cargo.toml  README-ja.md  README.md  cache-warden.plugin.zsh  justfile
.claude/rules/: daemon-notarized-binary.md  ssh-agent-socket-test-isolation.md
.github/workflows/: release.yml
completions/: _cache-warden
crates/cache-warden/: Cargo.toml
crates/cache-warden-authsock/: Cargo.toml
crates/cache-warden-authsock/src/: codec.rs  error.rs  lib.rs  message.rs  op.rs  op_cache.rs  op_discovery.rs  process_policy.rs  registry.rs  signer.rs  upstream.rs
crates/cache-warden-authsock/src/filter/: comment.rs  evaluator.rs  fingerprint.rs  github.rs  keyfile.rs  keytype.rs  mod.rs  pubkey.rs  rule.rs
crates/cache-warden-authsock/tests/: wire_vectors.rs
crates/cache-warden-cli/: Cargo.toml
crates/cache-warden-cli/src/: config.rs  defs.rs  help.rs  main.rs  mode.rs  namespace.rs  otp_type.rs  refs.rs  totp.rs
crates/cache-warden-cli/src/commands/: client.rs  config_cmd.rs  daemon_cmd.rs  inject_cmd.rs  internal_cmd.rs  mod.rs  op_private_key.rs  run_cmd.rs  service.rs
crates/cache-warden-cli/src/daemon/: authsock.rs  handler.rs  hardening.rs  mod.rs  otp_adapter.rs  peer.rs  server.rs  upstream_path.rs
crates/cache-warden-cli/src/protocol/: duration.rs  mod.rs  wire.rs
crates/cache-warden-cli/tests/: authsock_e2e.rs  e2e.rs  hardening_ptrace.rs  help_cli.rs  inject_run_e2e.rs  service_e2e.rs
crates/cache-warden/src/: auth.rs  capability.rs  child_process.rs  clock.rs  definition.rs  entry.rs  lib.rs  meta.rs  process.rs  secret.rs  source.rs  store.rs  test_helpers.rs
crates/cache-warden/src/secret/: mlock.rs
crates/macos-tcc/: Cargo.toml
crates/macos-tcc/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN-ja.md  DESIGN.md  ROADMAP.md  STRUCTURE.md
docs/decisions/: DR-0001-concept.md  DR-0002-workspace-structure.md  DR-0003-secure-kv-core-and-adapters.md  DR-0004-authsock-warden-succession.md  DR-0005-core-security-dependencies.md  DR-0006-process-inspection-dependencies.md  DR-0007-mlock-memory-pinning.md  DR-0008-single-daemon-hosting.md  DR-0009-control-socket-protocol-v1.md  DR-001-concept.md  DR-0010-config-and-reauth-command.md  DR-0011-ttl-base-separation-and-pin.md  DR-0012-process-access-policy.md  DR-0013-secret-reference-injection.md  DR-0014-kv-definition-model.md  DR-0015-dry-run-verification-mode.md  DR-0016-otp-value-type.md  DR-0017-kv-namespaces.md  DR-0018-typed-sources-auth-and-prefetch.md  DR-0019-daemon-service-registration.md  DR-002-workspace-structure.md  DR-0020-macos-signing-and-app-bundle.md  DR-0021-signal-shutdown-handling.md  DR-0022-fetch-failure-backoff.md  DR-0023-op-discovery-startup-latency.md  DR-0024-cap-access-gate.md  DR-0025-list-filtered-itemref.md  INDEX.md  draft-DR-0024-cap-access-gate-CODEX.md  draft-DR-0024-cap-access-gate-OPUS.md  draft-DR-0024-comparison-review.md
docs/design/: authsock-adapter-port-plan.md  lazy-load-op-key-unification-plan.md
docs/findings/: 2026-06-12-macos-tcc-responsible-process.md  2026-06-13-key-type-signing-matrix.md  2026-06-14-macos-tcc-fda.md  2026-06-14-op-cli-failure-categorization.md
docs/issue/: 2026-06-11-otp-value-type.md  2026-06-11-secret-reference-injection.md  2026-06-13-op-discovery-blocks-startup.md  2026-06-14-expose-secret-allowlist.md  2026-06-14-fda-check-flow-port.md  2026-06-14-finish-get-working-buffer-zeroize.md  2026-06-14-graceful-restart-state-handoff.md  2026-06-14-internal-key-forget-interface.md  2026-06-14-op-refetch-loop.md  2026-06-14-ssh-agent-provider-architecture.md  2026-06-14-touchid-blocks-blocking-pool.md  2026-06-15-changelog-md-adoption.md  2026-06-22-cli-display-backoff-until.md  2026-06-22-crate-macos-process-inspect.md  2026-06-22-custom-touchid-dialog.md  2026-06-22-kv-get-peer-identity-guard.md  INDEX.md
docs/issue/archive/: 2026-06-14-op-refetch-loop.md  2026-06-22-cli-display-backoff-until.md
docs/journal/: 2026-06-10-design-reboot-and-core-implementation.md  2026-06-11-authsock-port-and-fable-handoff.md  2026-06-11-definition-model-and-injection.md  2026-06-12-cli-ergonomics-and-namespaces.md  2026-06-12-parity-phase2.md  2026-06-13-handoff-ecdsa-dogfood-stablewhich.md  2026-06-14-dr0022-dr0023-deploy-and-dogfood-restore.md  2026-06-15-dr0024-g2-dr0025-f2-impl-handoff.md  2026-06-17-cw-discovery-block-incident.md  2026-06-22-op-refetch-loop-live-diagnosis.md
docs/runbooks/: apple-signing-secrets-setup.md  op-refetch-loop-live-diagnosis.md  parity-verification.md  release-notarization-403.md
tests/: completion.zsh
