[package]
name = "cache-warden-authsock"
version.workspace = true
edition.workspace = true
description = "SSH agent protocol adapter for cache-warden, the secure secret cache"
license = "MIT"
repository = "https://github.com/kawaz/cache-warden"
# Not published to crates.io for now. Unlike the core `cache-warden` library
# (which is publish-target), the adapter's crates.io distribution is deferred
# until the authsock feature set stabilizes; revisit when the adapter is ready.
publish = false

[dependencies]
# The secure-secret-cache core. The adapter sits on top of it (DR-0003/DR-0004):
# it borrows the generic process-authentication facts (`ProcessInfo` / its derived
# `name()`) to interpret the socket-level `allowed_processes` policy here, in the
# adapter, while the ancestry *walk* stays in the core. This is an
# adapter→core dependency only (the core never depends back on the adapter).
# Path-only (no version req): the adapter is publish=false and lives in this
# workspace, so it must not pin a core version that `just bump-version` would
# then have to chase on every release.
cache-warden = { path = "../cache-warden" }
# SSH agent wire format: length-prefixed binary fields. `bytes` mirrors the
# upstream authsock-warden codec (zero-copy `Bytes` / `BytesMut`).
bytes = "1"
# SSH key handling: public-key blob parsing/encoding (codec + registry) and
# private-key PEM parsing (OpenSSH + PKCS#8) for the signer. `ssh_encoding::Encode`
# (re-exported by ssh-key) builds the wire public-key blob in the registry.
ssh-key = { version = "0.6", features = ["std", "ed25519", "rsa", "p256", "p384", "p521"] }
ssh-encoding = "0.2"
# Local error enum for this crate. The core library stays std-only; the adapter
# may take an ergonomic error dependency.
thiserror = "2"
# Async framing of agent messages over a connection (`io-util`), plus the
# upstream-agent client: `net` for `UnixStream::connect` and `time` for the
# connect / request timeouts. The *listener* wiring (accept loop, runtime) still
# lives on the CLI side (DR-0008); only the upstream *client* side is here.
tokio = { version = "1", features = ["io-util", "net", "time"] }

# --- Key filters (per-socket key visibility; ported from authsock-warden) ---
# Glob matching for comment filters (e.g. `comment=github*`). Mirrors the
# authsock-warden filter selection.
globset = "0.4"
# Regex matching for comment filters (the `~regex` form).
regex = "1"

# --- Signer (local 1Password-style signing; ported from authsock-warden) ---
# Native signing-crate types kept end-to-end to avoid lossy intermediate
# conversions (see signer.rs design rationale). Versions/features follow the
# authsock-warden selection.
# Ed25519 signing + PKCS#8 decode (1Password Ed25519 keys).
ed25519-dalek = { version = "2", features = ["pkcs8"] }
# RSA signing (ssh-rsa / rsa-sha2-256 / rsa-sha2-512) with CRT precomputation.
rsa = { version = "0.9", features = ["std"] }
# ECDSA signing (ecdsa-sha2-nistp256/384/521). Each curve's `ecdsa` feature
# binds the SSH-mandated hash (P-256->SHA-256, P-384->SHA-384, P-521->SHA-512)
# as the `Signer` default digest; `pem` pulls in PKCS#8 + SEC1 PEM decoding for
# the `BEGIN PRIVATE KEY` / `BEGIN EC PRIVATE KEY` parse paths. ssh-key only
# parses the OpenSSH ECDSA wire form, so these crates own the PKCS#8/SEC1 decode
# and all signing, mirroring how `rsa` / `ed25519-dalek` are used here.
p256 = { version = "0.13", features = ["ecdsa", "pem", "std"] }
p384 = { version = "0.13", features = ["ecdsa", "pem", "std"] }
# P-521's `Signer` impl draws its nonce from `OsRng`, so it needs `getrandom`
# (P-256/384 get a deterministic RFC 6979 nonce and do not). `pem` on all three
# pulls in the PKCS#8 + SEC1 (`BEGIN EC PRIVATE KEY`) PEM decoders used by the
# `SecretKey::from_*_pem` parse paths.
p521 = { version = "0.13", features = ["ecdsa", "pem", "std", "getrandom"] }
# PKCS#8 PEM/DER decoding + OID dispatch for strict private-key parsing.
pkcs8 = { version = "0.10", features = ["pem", "std"] }
# SHA-1 hash for legacy ssh-rsa signatures (deprecated remote servers).
sha1 = { version = "0.10", features = ["oid"] }
# SHA-2 hashes for rsa-sha2-256 / rsa-sha2-512 (DR-015 flag dispatch).
sha2 = { version = "0.10", features = ["oid"] }
# `signature::Signer` / `Verifier` traits used by the RSA signing path.
signature = "2"
# Decode the base64 PEM body in the lenient 1Password Ed25519 PKCS#8 fallback.
base64 = "0.22"
# Zeroize transient key-material buffers (PEM body / DER / seed) in the signer.
zeroize = "1"

# --- op key discovery (1Password vault enumeration; ported from authsock-warden) ---
# Deserialize `op item list` / `op item get` JSON and (de)serialize the public-key
# disk cache (`op_map.json`, fingerprint → public-key map; holds no secrets).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Drive the async codec / upstream tests (in-memory cursors + fake agent socket
# via `net`; #[tokio::test] needs `rt` + `macros`).
tokio = { version = "1", features = ["rt", "io-util", "macros", "net"] }
# Build canonical wire vectors in integration tests.
bytes = "1"
# Temp authorized_keys files for the keyfile filter tests, and a private cache
# dir for the op disk-cache tests.
tempfile = "3"
# Generate ephemeral ECDSA keys in the signer round-trip tests (per-curve, so we
# never hardcode P-384 / P-521 secrets). `OsRng` feeds `EcdsaKeypair::random`.
rand_core = { version = "0.6", features = ["getrandom"] }
