[package]
name = "cache-warden-cli"
version.workspace = true
edition.workspace = true
description = "CLI for cache-warden, the secure secret cache"
publish = false

[[bin]]
name = "cache-warden"
path = "src/main.rs"

[dependencies]
cache-warden = { path = "../cache-warden" }
# SSH agent adapter: codec, public-key registry, local signer (port Iteration 1).
cache-warden-authsock = { path = "../cache-warden-authsock" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime + Unix socket I/O for the daemon (DR-0008 single-process host).
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
# base64 encoding of secret bytes on the control-socket wire (DR-0009).
base64 = "0.22"
# TOML configuration file parsing (DR-0010). Kept on the CLI side only; the
# library stays dependency-minimal (DR-0002).
toml = "0.8"
# Peer credential lookup (LOCAL_PEERPID / SO_PEERCRED) on the control socket.
libc = "0.2"
# TOTP derivation for the OTP value type (DR-0016): RFC 4226/6238 HMAC-OTP.
# CLI-only; the core library stays dependency-minimal (DR-0002). RustCrypto
# crates are small and well-vetted.
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
# Stable binary-path resolution for `daemon register` (DR-0019 §2.5): resolve
# the running binary to a stable PATH symlink (not a dev/Cellar/ephemeral path)
# baked into the service definition. Runtime-dependency-free (DR-0002).
stable-which = "0.3"

[dev-dependencies]
tempfile = "3"
# Verify agent-produced signatures in the authsock daemon unit/E2E tests
# (the production path never verifies; these crates are test-only).
ssh-key = { version = "0.6", features = ["std", "ed25519", "rsa"] }
ssh-encoding = "0.2"
signature = "2"
bytes = "1"
cache-warden = { path = "../cache-warden", features = ["test-support"] }
