[package]
name = "cache-warden"
version.workspace = true
edition.workspace = true
description = "Secure secret cache core: TTL-managed in-memory secret store with zeroize-backed protection"
license = "MIT"
repository = "https://github.com/kawaz/cache-warden"
readme = "../../README.md"

[dependencies]
# Reliable secret zeroization. See docs/decisions/DR-0005-core-security-dependencies.md
# for why this is an intentional exception to the "std only" dependency goal (DR-0002).
zeroize = "1"
# Process inspection (pid -> exe path / parent pid / start time) via OS APIs.
# macOS: proc_pidpath / proc_pidinfo; Linux: sysconf(_SC_CLK_TCK) for the /proc starttime unit.
# See docs/decisions/DR-0006-process-inspection-dependencies.md for the rationale and the
# sysinfo / raw-syscall / zero-dependency alternatives that were rejected.
libc = "0.2"
# Structured diagnostic logging for failure backoff events (DR-0022). Consumer
# installs a subscriber (e.g. tracing-subscriber in the daemon); the core only
# emits the events. DR-0002 allows this as a well-established zero-boilerplate
# observability primitive that does not pull in runtime or network dependencies.
tracing = "0.1"
# Capability token generation for DR-0024 capability-based access gate.
# Called once at startup to seed the per-process random offset; cost is negligible.
# Same category as zeroize (DR-0005) and libc (DR-0006): intentional minimal dependency exception.
getrandom = "0.2"

[features]
test-support = []

[dev-dependencies]
tempfile = "3"
